[gd_scene load_steps=26 format=2]

[ext_resource path="res://script/map/House2map.gd" type="Script" id=1]
[ext_resource path="res://Sprite/Map/House2.png" type="Texture" id=2]
[ext_resource path="res://scence/ghost/GhostT.tscn" type="PackedScene" id=3]
[ext_resource path="res://scence/effect/storm.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprite/effect/wind/W401-8.png" type="Texture" id=5]
[ext_resource path="res://Sprite/effect/wind/W401-13.png" type="Texture" id=6]
[ext_resource path="res://Sprite/effect/wind/W401-2.png" type="Texture" id=7]
[ext_resource path="res://Sprite/effect/wind/W401-11.png" type="Texture" id=8]
[ext_resource path="res://Sprite/effect/wind/W401-6.png" type="Texture" id=9]
[ext_resource path="res://Sprite/effect/wind/W401-12.png" type="Texture" id=10]
[ext_resource path="res://Sprite/effect/wind/W401-16.png" type="Texture" id=11]
[ext_resource path="res://Sprite/effect/wind/W401-5.png" type="Texture" id=12]
[ext_resource path="res://Sprite/effect/wind/W401-10.png" type="Texture" id=13]
[ext_resource path="res://Sprite/effect/wind/W401-9.png" type="Texture" id=14]
[ext_resource path="res://Sprite/effect/wind/W401-14.png" type="Texture" id=15]
[ext_resource path="res://Sprite/effect/wind/W401-3.png" type="Texture" id=16]
[ext_resource path="res://Sprite/effect/wind/W401-15.png" type="Texture" id=17]
[ext_resource path="res://Sprite/effect/wind/W401-1.png" type="Texture" id=18]
[ext_resource path="res://Sprite/effect/wind/W401-4.png" type="Texture" id=19]
[ext_resource path="res://Sprite/effect/wind/W401-7.png" type="Texture" id=20]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 48, 0, 48, 32, 0, 32 )

[sub_resource type="TileSet" id=3]
0/name = "House2.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 64, 48, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "House2.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 48, 96, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 1 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "House2.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 16, 0, 48, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 2 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "House2.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 80, 176, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13.5, 14.5 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 7 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 20 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="House2map" type="Node2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="ground" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 5
collision_mask = 5
format = 1
tile_data = PoolIntArray( -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 0, -65524, 2, 0, -65523, 2, 0, -65522, 2, 0, -65521, 2, 0, -65520, 2, 0, -65519, 2, 0, -65518, 2, 0, -65517, 2, 0, -65516, 2, 0, -65515, 2, 0, -65514, 2, 0, 65534, -2147483646, 0, 24, -1610612734, 0, 131070, -2147483646, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65560, -1610612734, 0, 196606, -2147483646, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131096, -1610612734, 0, 262142, -2147483646, 0, 196632, -1610612734, 0, 327678, -2147483646, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262168, -1610612734, 0, 393214, -2147483646, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327704, -1610612734, 0, 458750, -2147483646, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393240, -1610612734, 0, 524286, -2147483646, 0, 458776, -1610612734, 0, 589822, -2147483646, 0, 524288, 0, 0, 524289, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524312, -1610612734, 0, 589825, 0, 0, 589826, 0, 0, 589831, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589848, -1610612734, 0, 720894, -2147483646, 0, 655360, 0, 0, 655361, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655384, -536870910, 0, 786430, -2147483646, 0, 720920, -536870910, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 917503, 1073741826, 0, 851968, 1073741826, 0, 851969, 1073741826, 0, 851970, 1073741826, 0, 851971, 1073741826, 0, 851972, 1073741826, 0, 851973, 1073741826, 0, 851974, 1073741826, 0, 851975, 1073741826, 0, 851976, 1073741826, 0, 851977, 1073741826, 0, 851980, 1, 0, 851981, 1073741826, 0, 851982, 1073741826, 0, 851983, 1073741826, 0, 851984, 1073741826, 0, 851985, 1073741826, 0, 851986, 1073741826, 0, 851987, 1073741826, 0, 851988, 1073741826, 0, 851989, 1073741826, 0, 851990, 1073741826, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 202, 209 )
shape = SubResource( 4 )

[node name="GhostT" parent="." instance=ExtResource( 3 )]
position = Vector2( 203.667, 50.3333 )

[node name="wind" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="wind"]
position = Vector2( 158.667, 141 )
scale = Vector2( 0.0931866, 0.129444 )
frames = SubResource( 5 )
frame = 10
speed_scale = 3.0
playing = true
offset = Vector2( 0, 0.1 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="wind"]
position = Vector2( 301.333, 70.3333 )
scale = Vector2( 0.0931866, 0.129444 )
frames = SubResource( 5 )
frame = 4
speed_scale = 3.0
playing = true
offset = Vector2( 0, 0.1 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="wind"]
position = Vector2( 363, 162 )
scale = Vector2( 0.0931866, 0.129444 )
frames = SubResource( 5 )
frame = 4
speed_scale = 3.0
playing = true
offset = Vector2( 0, 0.1 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="wind"]
position = Vector2( 72.6667, 79.6667 )
scale = Vector2( 0.0931866, 0.129444 )
frames = SubResource( 5 )
frame = 15
speed_scale = 3.0
playing = true
offset = Vector2( 0, 0.1 )

[node name="tornado" type="Node2D" parent="."]

[node name="storm" parent="tornado" instance=ExtResource( 4 )]
position = Vector2( 25, 49.3333 )

[node name="storm2" parent="tornado" instance=ExtResource( 4 )]
position = Vector2( 262.333, 136.333 )

[node name="effect" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
